White border fix on mobile

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -158,6 +158,9 @@ form
 
 
 @media screen and (max-width: 800px)
+  html,
+  body
+    width: 100%
   #top
     display: none
   #About
